[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "greeceapt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Pillow",
    "imagehash",
    "requests",
    "httpx",
    "curl-cffi",
    "playwright",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: end-to-end test that hits real XE/Spitogatos APIs and Ollama (run with -m live)",
]
